# fuzzyget

./: .gitignore  README.md  pyproject.toml
fuzzyget/: finder.py  logger.py  main.py
scripts/: clear_logs.sh
tests/: test_finder.py
userdata/: nllsh.txt
